# lala-power

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cpu-debug.sh  cpu-test.sh
include/: bab.hpp  branch.hpp  search_tree.hpp  split.hpp  value_order.hpp  variable_order.hpp
include/lala/: bab.hpp  branch.hpp  light_branch.hpp  search_tree.hpp  split.hpp  split_strategy.hpp  table.hpp  tables.hpp  value_order.hpp  variable_order.hpp
tests/: bab_test.cpp  helper.hpp  search_tree_test.cpp  split_test.cpp  table_test.cpp  table_test_unfixed.cpp  tables_test.cpp  tables_test_unfixed.cpp
